// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikers /> should not render anything when proposal has no likers 1`] = `null`;

exports[`<ProposalDetailLikers /> should render a <OverlayTrigger /> with <Tooltip /> when proposal has likers 1`] = `
<span
  className="tags-list__tag"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="proposal-1-likers-tooltip-"
        placement="right"
      >
        <ProposalDetailLikersTooltipLabel
          likers={
            Array [
              Object {
                "displayName": "user",
              },
            ]
          }
        />
      </Tooltip>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <ProposalDetailLikersLabel
      likers={
        Array [
          Object {
            "displayName": "user",
          },
        ]
      }
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </OverlayTrigger>
</span>
`;

exports[`<ProposalDetailLikers /> should render a div when specified 1`] = `
<div
  className="tags-list__tag"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="proposal-1-likers-tooltip-"
        placement="right"
      >
        <ProposalDetailLikersTooltipLabel
          likers={
            Array [
              Object {
                "displayName": "user",
              },
            ]
          }
        />
      </Tooltip>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <ProposalDetailLikersLabel
      likers={
        Array [
          Object {
            "displayName": "user",
          },
        ]
      }
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </OverlayTrigger>
</div>
`;
